# The-wisdom-of-farmland

./: LICENSE  README.md  get_miou.py  inference.py  labelme2voc.py  onnx_infer.py  produce_onnx.py  pspnet.py  train.py
VOCdevkit/VOC2007/ImageSets/Segmentation/: train.txt  trainval.txt  val.txt
dataset/: label.txt
dataset/before/: 2-9.json  3-11.json  3-4.json  5-7.json  6-10.json  6-9.json  7-4.json  7-7.json  8-6.json  9-10.json
onnx/: CMakeLists.txt  README.md
onnx/src/: imageSeg.cpp
